Version: 0.1.3
Date: 2020-04-27
  Fixes:
    - Miscalutation in underground pipe distance.
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2020-05-02
  Changes:
    - Improve behavior for very small selections.
  Features:
    - Add support for any liquid resource for which a suitable miner is available. If there's multiple miner types available for the same resource, the one Factorio returns first is picked. Rectangular shaped miners are excluded due to limitations in the planner routine.
    - Retrieve miner's pipe output position and size from its prototype. If there are mutliple output resources, or multiple outputs for the same resource, the ones Factorio returns first are picked. 
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 2020-05-04
  Features:
    - If 'Module Inserter' is installed, retrieve and apply module configuration for the entities placed by P.U.M.P.. If 'Module Inserter' is not installed, no modules are added.
    - Add setting to enable/disable the usage of 'Module Inserter'. If 'Module Inserter' is not installed, the setting is hidden. It's enabled by default.  
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 2020-05-04
  Fixes:
    - Check if setting to interface with Module Inserter exists.
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 2020-08-29
  Fixes:
    - Disabled shortcut now has a P.U.M.P. icon instead of a blueprint icon.
    - Added values for item name and sorting.
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: ??
  Fixes:
    - Fix issue where a tunnel could be planned 1 too long, resulting in the exit of the pump meeting with the side of an underground pipe.