@@ -1,0 +1,1 @@
+{"toolbox":{"module_config":{},"extractor":{"entity_name":"pumpjack","output_offsets":{"2":{"x":2,"y":-1},"4":{"x":-1,"y":2},"6":{"x":-2,"y":1},"0":{"x":1,"y":-2}},"relative_bounds":{"left_top":{"x":-1,"y":-1},"right_bottom":{"x":1,"y":1}}},"connector":{"entity_name":"pipe","underground_entity_name":"pipe-to-ground","underground_distance_min":0,"underground_distance_max":9}},"area":{"-457.5":{"-494.5":"can-build","-493.5":"can-build","-492.5":"can-build","-491.5":"can-build","-490.5":"can-build","-489.5":"can-build","-488.5":"can-build","-487.5":"can-build","-486.5":"can-build","-485.5":"can-build","-484.5":"can-build","-483.5":"can-build"},"-456.5":{"-494.5":"can-build","-493.5":"can-build","-492.5":"can-build","-491.5":"can-build","-490.5":"can-build","-489.5":"can-build","-488.5":"can-build","-487.5":"reserved-for-pump","-486.5":"reserved-for-pump","-485.5":"reserved-for-pump","-484.5":"can-build","-483.5":"can-build"},"-455.5":{"-494.5":"can-build","-493.5":"can-build","-492.5":"can-build","-491.5":"can-build","-490.5":"reserved-for-pump","-489.5":"reserved-for-pump","-488.5":"reserved-for-pump","-487.5":"reserved-for-pump","-486.5":"oil-well","-485.5":"reserved-for-pump","-484.5":"can-build","-483.5":"can-build"},"-454.5":{"-494.5":"can-build","-493.5":"can-build","-492.5":"can-build","-491.5":"can-build","-490.5":"reserved-for-pump","-489.5":"oil-well","-488.5":"reserved-for-pump","-487.5":"reserved-for-pump","-486.5":"reserved-for-pump","-485.5":"reserved-for-pump","-484.5":"can-build","-483.5":"can-build"},"-453.5":{"-494.5":"can-build","-493.5":"reserved-for-pump","-492.5":"reserved-for-pump","-491.5":"reserved-for-pump","-490.5":"reserved-for-pump","-489.5":"reserved-for-pump","-488.5":"reserved-for-pump","-487.5":"can-build","-486.5":"reserved-for-pump","-485.5":"reserved-for-pump","-484.5":"reserved-for-pump","-483.5":"can-build"},"-452.5":{"-494.5":"can-build","-493.5":"reserved-for-pump","-492.5":"oil-well","-491.5":"reserved-for-pump","-490.5":"can-build","-489.5":"can-build","-488.5":"can-build","-487.5":"can-build","-486.5":"reserved-for-pump","-485.5":"oil-well","-484.5":"reserved-for-pump","-483.5":"can-build"},"-451.5":{"-494.5":"can-not-build","-493.5":"reserved-for-pump","-492.5":"reserved-for-pump","-491.5":"reserved-for-pump","-490.5":"can-build","-489.5":"can-build","-488.5":"can-build","-487.5":"can-build","-486.5":"reserved-for-pump","-485.5":"reserved-for-pump","-484.5":"reserved-for-pump","-483.5":"can-build"},"-450.5":{"-494.5":"can-not-build","-493.5":"can-build","-492.5":"can-build","-491.5":"can-build","-490.5":"can-build","-489.5":"can-build","-488.5":"can-build","-487.5":"can-build","-486.5":"can-build","-485.5":"can-build","-484.5":"can-build","-483.5":"can-build"}},"area_bounds":{"left_top":{"y":-494.5,"x":-457.5},"right_bottom":{"y":-483.5,"x":-450.5}}}
