@@ -47,6 +47,7 @@ Date: 2020-08-29
     - Added values for item name and sorting.
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.8
-Date: ??
+Date: 2020-08-31
   Fixes:
     - Fix issue where a tunnel could be planned 1 too long, resulting in the exit of the pump meeting with the side of an underground pipe.
+    - Fix out-of-bounds obstruction checking, leading to crash.
